<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none" >

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
         <Button
        android:id="@+id/saveDB"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/window"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="buttonListener"
        android:text="@string/save_db" />

    <Button
        android:id="@+id/getFromHttp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/restoreFromDB"
        android:layout_below="@+id/restoreFromDB"
        android:layout_marginTop="20dp"
        android:onClick="buttonListener"
        android:text="@string/get_from_http" />

    <Button
        android:id="@+id/restoreFromDB"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/saveDB"
        android:layout_below="@+id/saveDB"
        android:layout_marginTop="20dp"
        android:onClick="buttonListener"
        android:text="@string/restore_db" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/saveDB"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:text="@string/global_brightness" />

    <SeekBar
        android:id="@+id/global"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/window"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:max="100" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/global"
        android:layout_marginTop="30dp"
        android:text="@string/window_brightness" />

    <SeekBar
        android:id="@+id/window"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:max="100" />
    </RelativeLayout>

</ScrollView>
